force-app/main/default/objects/Warehouse_Transit_Rule__mdt/Warehouse_Transit_Rule__mdt.object-meta.xml
<CustomObject>
    <description
  >Transit time rules between warehouse ExternalReference codes and destination regions for AI Parts ETA calculation.</description>
    <label>Warehouse Transit Rule</label>
    <pluralLabel>Warehouse Transit Rules</pluralLabel>
</CustomObject>