force-app/main/default/objects/Warehouse_Transit_Rule__mdt/fields/Cross_Region__c.field-meta.xml
<CustomField>
    <fullName>Cross_Region__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >True when source warehouse region differs from destination region; triggers approval in orchestrator.</description>
    <label>Cross Region</label>
    <type>Checkbox</type>
</CustomField>