force-app/main/default/objects/Warehouse_Transit_Rule__mdt/fields/Destination_Region__c.field-meta.xml
<CustomField>
    <fullName>Destination_Region__c</fullName>
    <description
  >Customer destination region for transit calculation.</description>
    <label>Destination Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
                <default>true</default>
                <label>North America</label>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>