force-app/main/default/objects/Warehouse_Transit_Rule__mdt/fields/Source_Warehouse_Ref__c.field-meta.xml
<CustomField>
    <fullName>Source_Warehouse_Ref__c</fullName>
    <description>Warehouse ExternalReference (e.g. WH-SJO-002).</description>
    <label>Source Warehouse Ref</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>