force-app/main/default/objects/Warehouse_Transit_Rule__mdt/fields/Transit_Hours_Min__c.field-meta.xml
<CustomField>
    <fullName>Transit_Hours_Min__c</fullName>
    <description
  >Minimum in-transit hours after outbound lead time.</description>
    <label>Transit Hours Min</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>